Fix docker config issues