@@ -8,44 +8,46 @@ import io.aklivity.zilla.manager.internal.commands.install.ZpmError
 import java.nio.file.Files
 import java.nio.file.Path
 import java.nio.file.StandardOpenOption
+import java.nio.file.attribute.PosixFilePermissions
 
 class DefaultLauncherWriter(
     private val dryRun: Boolean = false,
-    private val feedback: (String) -> Unit = { x -> println(x) }
+    private val feedback: (String) -> Unit = { x -> println(x) },
+    private val launcherDir: Path
 ) : LauncherWriter {
 
     override fun write(entryModule: String, outputDir: Path): Either<ZpmError, Path> = Either.catch {
-        val launcherPath = outputDir.resolve("zilla") // no .bat on Linux
+        val launcherPath = launcherDir.resolve("zilla")
         val imagePath = outputDir.resolve("image")
+        val javaBin = imagePath.relativize(launcherDir).resolve("bin/java").toString()
 
         if (dryRun) {
             feedback("🧪 [dry-run] Would write launcher for module $entryModule to $launcherPath")
-            Files.createDirectories(outputDir)
+            Files.createDirectories(launcherDir)
             Files.writeString(
                 launcherPath,
                 "#!/usr/bin/env bash\n# Dry-run launcher\n",
                 StandardOpenOption.CREATE,
                 StandardOpenOption.TRUNCATE_EXISTING
             )
-            launcherPath.toFile().setExecutable(true)
+            Files.setPosixFilePermissions(
+                launcherPath,
+                PosixFilePermissions.fromString("rwxr-xr-x")
+            )
             feedback("✅ [dry-run] Wrote launcher to $launcherPath")
             launcherPath.right()
         } else {
             feedback("📝 Writing launcher for module io.aklivity.zilla.runtime.command to $launcherPath")
-            Files.createDirectories(outputDir)
+            Files.createDirectories(launcherDir)
 
-            val javaBin = "image/bin/java"
+            // Read the shell script from resources
+            val resourcePath = "scripts/zilla.sh"
+            val scriptContent = this::class.java.classLoader.getResourceAsStream(resourcePath)?.use { input ->
+                input.bufferedReader().readText()
+            } ?: throw IllegalStateException("Resource not found: $resourcePath")
 
-            val launcherContent = """
-    #!/usr/bin/env bash
-    ZILLA_DIRECTORY="$(cd "$(dirname "$0")" && pwd)"
-    exec "${'$'}ZILLA_DIRECTORY/$javaBin" \
-      --add-reads org.agrona.core=jdk.unsupported \
-      --module-path "${'$'}ZILLA_DIRECTORY/.zpm/modules" \
-      -m io.aklivity.zilla.runtime.command/io.aklivity.zilla.runtime.command.internal.ZillaMain \
-      "$@"
-""".trimIndent()
-
+            // Replace placeholder with javaBin
+            val launcherContent = scriptContent.replace("{javaBin}", javaBin)
 
             Files.writeString(
                 launcherPath,
@@ -53,7 +55,10 @@ class DefaultLauncherWriter(
                 StandardOpenOption.CREATE,
                 StandardOpenOption.TRUNCATE_EXISTING
             )
-            launcherPath.toFile().setExecutable(true) // important on Linux
+            Files.setPosixFilePermissions(
+                launcherPath,
+                PosixFilePermissions.fromString("rwxr-xr-x")
+            )
             feedback("✅ Wrote launcher to $launcherPath")
             launcherPath.right()
         }
